--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -7,113 +7,140 @@
 
 {% block mainpage %}
 
-    <section class="feature-image-section">
-            <h2>Accredited Procore Partner</h2>
-            <h4>Get a free consultation today</h4>
-            <a class="button" href="{% url 'contact' %}">Request a Demo</a>
-    </section>
-    <img class="feature-image-section__img" src="{% static 'img/procore-app.jpg' %}" alt="Procore app"/>
+<section class="feature-image-section">
+    <h2>Accredited Procore Partner</h2>
+    <h4>Get a free consultation today</h4>
+    <a class="button" href="{% url 'contact' %}">Request a Demo</a>
+</section>
+<img class="feature-image-section__img" src="{% static 'img/procore-app.jpg' %}" alt="Procore app"/>
 
 
-    <section class="procore-section">
-        <div class="text-block text-block--center">
-            <h3>We help you get the most out of Procore</h3>
+<section class="centered-section">
+    <div class="text-block text-block--center">
+        <h3>We help you get the most out of Procore</h3>
 
-            <div class="video">
-                <iframe class="video__inner"
-                        width="560"
-                        height="315"
-                        src="https://www.youtube.com/embed/E0BmtOMwxGk"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen>
-                </iframe>
-            </div>
-            <p>
-                Procore is a single cloud-based software platform that manages your projects, resources and financials
-                from project planning to closeout. The platform connects every project contributor to solutions built
-                specifically for this industry—for the owner, for the general contractor, and for the specialty
-                contractor.
-            </p>
-            <p>
-                Their App Marketplace has over 150 partner solutions that integrate seamlessly with Procore, giving you
-                the freedom to connect with what works best for you. The ability to easily communicate across disparate
-                teams makes it easier to work together by eliminating silos and establishing a single source of
-                information. It's how Procore gives your team access to everything they need to know to get their job
-                done.
-            </p>
+        <div class="video">
+            <iframe class="video__inner"
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/E0BmtOMwxGk"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+            </iframe>
         </div>
-    </section>
+        <p>
+            Procore is a single cloud-based software platform that manages your projects, resources and financials
+            from project planning to closeout. The platform connects every project contributor to solutions built
+            specifically for this industry—for the owner, for the general contractor, and for the specialty
+            contractor.
+        </p>
+        <p>
+            Their App Marketplace has over 150 partner solutions that integrate seamlessly with Procore, giving you
+            the freedom to connect with what works best for you. The ability to easily communicate across disparate
+            teams makes it easier to work together by eliminating silos and establishing a single source of
+            information. It's how Procore gives your team access to everything they need to know to get their job
+            done.
+        </p>
+    </div>
+</section>
 
-    <section class="content-section">
-        <img class="section-image" src="{% static 'img/happy-builder.jpg' %}" alt="Happy builder"/>
-        <div class="text-block">
-            <h3>About Bauhaus</h3>
-            <p>
-                Bauhaus Consultancy is an invaluable resource to help you on your digital transformation journey.
-            </p>
-            <p>
-                Powerful software solutions are an important first step in helping your business maximise on profit,
-                increase productivity and save time.
-            </p>
-            <p>
-                The key to getting the most out of any software suite is training, pre-roll out consultancy and a
-                guiding hand transitioning your processes in to efficient digital workflows.
-            </p>
-            <p>
-                This is where Bauhaus Consultancy comes in. We will work closely with your business and in partnership
-                with Procore to ensure that you absolutely get the most out of your investment, maximising user adoption
-                and best practice to help your business flourish.
-            </p>
-            <p>
-                Bauhaus Consultancy is a fully accredited Procore partner who work closely with Procore to help you get
-                the best out of a fully comprehensive, world class building project management tool.
-            </p>
-        </div>
-    </section>
-
-    <section class="content-section content-section--reverse">
-        <img class="section-image" src="{% static 'img/culture.jpg' %}" alt="Group of people on a construction site"/>
-        <div class="text-block">
-            <h3>Our Culture</h3>
-            <p>
-                Bauhaus Consultancy believes in people first.
-            </p>
-            <p>
-                We want to get to know and understand our clients as people with real life pressures and needs.
-            </p>
-            <p>
-                We pride ourselves on removing confusing jargon in order to deliver real solutions to real problems that real people are experiencing.
-            </p>
-            <p>
-                If you have a question, ask it and enjoy a straight answer.
-            </p>
-        </div>
-    </section>
-
-    <section class="about-me-section">
-        <div class="text-block text-block--center">
-            <img class="round-image" src="{% static 'img/andrew-shaw.jpg' %}" alt="Photo of Andrew Shaw"/>
-            <h4>Andrew Shaw, Director</h4>
-            <p>
-                I have over ten years experience in helping companies like yours transition to digital alternatives and
-                truly transforming your business processes.
-            </p>
-            <p>
-                I am passionate about understanding your company’s specific requirements and challenges, using this to
-                guide you through your digital transformation journey as a trusted advisor.
-            </p>
-            <p>
-                I will support and guide you, sometimes even challenge you in order to deliver the very best service.
-            </p>
-            <p>
-                With a solid understanding of the construction industry and wealth of knowledge around Procore and its
-                tools, I look forward to collaborating with you on a journey to success.
-            </p>
-        </div>
-    </section>
+<img class="feature-image-section__img" src="{% static 'img/stairs.jpg' %}" alt="Procore app"/>
+<section class="feature-image-section feature-image-section--narrow">
+    <h2>Voice and Data Solutions</h2>
+    <h4>Get a free consultation today</h4>
+    <a class="button" href="{% url 'contact' %}">Get in Touch</a>
+</section>
 
 
+<section class="centered-section">
+    <div class="text-block text-block--center">
+        <h3>
+            Managed Service
+            for the rapid deployment of Phone &
+            Broadband
+        </h3>
+        <p>
+            We offer a range of Voice & Data solutions designed to get your Site & Sales offices up and running quickly.
+            Our New Home Builder customers can expect first class support as the journey progresses from the allocation
+            of a Virtual Number for marketing, through to the delivery of a 4G Router and IP Phone system and the final
+            phase of connection to Fibre Broadband (FTTC/FTTP).
+        </p>
+
+    </div>
+</section>
+
+<section class="content-section">
+    <img class="section-image" src="{% static 'img/happy-builder.jpg' %}" alt="Happy builder"/>
+    <div class="text-block">
+        <h3>About Bauhaus</h3>
+        <p>
+            Bauhaus Consultancy is an invaluable resource to help you on your digital transformation journey.
+        </p>
+        <p>
+            Powerful software solutions are an important first step in helping your business maximise on profit,
+            increase productivity and save time.
+        </p>
+        <p>
+            The key to getting the most out of any software suite is training, pre-roll out consultancy and a
+            guiding hand transitioning your processes in to efficient digital workflows.
+        </p>
+        <p>
+            This is where Bauhaus Consultancy comes in. We will work closely with your business and in partnership
+            with Procore to ensure that you absolutely get the most out of your investment, maximising user adoption
+            and best practice to help your business flourish.
+        </p>
+        <p>
+            Bauhaus Consultancy is a fully accredited Procore partner who work closely with Procore to help you get
+            the best out of a fully comprehensive, world class building project management tool.
+        </p>
+        <p>
+            We also supply a range of voice and data solutions to ensure that you are always connected.
+        </p>
+    </div>
+</section>
+
+<section class="content-section content-section--reverse">
+    <img class="section-image" src="{% static 'img/culture.jpg' %}" alt="Group of people on a construction site"/>
+    <div class="text-block">
+        <h3>Our Culture</h3>
+        <p>
+            Bauhaus Consultancy believes in people first.
+        </p>
+        <p>
+            We want to get to know and understand our clients as people with real life pressures and needs.
+        </p>
+        <p>
+            We pride ourselves on removing confusing jargon in order to deliver real solutions to real problems that
+            real people are experiencing.
+        </p>
+        <p>
+            If you have a question, ask it and enjoy a straight answer.
+        </p>
+    </div>
+</section>
+
+<section class="about-me-section">
+    <div class="text-block text-block--center">
+        <img class="round-image" src="{% static 'img/andrew-shaw.jpg' %}" alt="Photo of Andrew Shaw"/>
+        <h4>Andrew Shaw, Director</h4>
+        <p>
+            I have over ten years experience in helping companies like yours transition to digital alternatives and
+            truly transforming your business processes.
+        </p>
+        <p>
+            I am passionate about understanding your company’s specific requirements and challenges, using this to
+            guide you through your digital transformation journey as a trusted advisor.
+        </p>
+        <p>
+            I will support and guide you, sometimes even challenge you in order to deliver the very best service.
+        </p>
+        <p>
+            With a solid understanding of the construction industry and wealth of knowledge around Procore and its
+            tools, I look forward to collaborating with you on a journey to success.
+        </p>
+    </div>
+</section>
 
 
 {% endblock %}
