--- a/home/static/sass/homepage.scss
+++ b/home/static/sass/homepage.scss
@@ -14,7 +14,7 @@
   padding: 100px $side-gutter 270px;
   height: 530px;
   color: $color-white;
-  background: url('../img/procore-app.jpg') no-repeat top;
+  background: $color-white url('../img/procore-app.jpg') no-repeat top;
   background-size: cover;
 
   h2, h4 {
@@ -28,12 +28,17 @@
     width: 100%;
   }
 
+  &--narrow {
+    background-image: url('../img/stairs.jpg');
+    height: 200px;
+  }
+
   @media only screen and (max-width: $break-large-phone) {
     -webkit-align-items: center;
     align-items: center;
 
     padding: 50px $side-gutter-mobile;
-    background: none;
+    background-image: none;
     height: unset;
     color: $color-black;
     text-align: center;
@@ -75,7 +80,7 @@
   }
 }
 
-.procore-section {
+.centered-section {
   display: -webkit-flex;
   -webkit-flex-direction: column;
   -webkit-align-items: center;
